--- a/debian/rules
+++ b/debian/rules
@@ -74,7 +74,7 @@ override_dh_auto_install:
 	echo 'echo prefix=/usr'						>> debian/$(putils)/etc/infiniband/info
 	echo 'echo Kernel=`uname -r`'					>> debian/$(putils)/etc/infiniband/info
 	echo 'echo'							>> debian/$(putils)/etc/infiniband/info
-	echo 'echo "Configure options: `$(CURDIR)/ofed_scripts/dkms_ofed $(KVERS) get-openib-conf`"'	>> debian/$(putils)/etc/infiniband/info
+	echo 'echo "Configure options: `/usr/src/$(pname)-$(pversion)/ofed_scripts/dkms_ofed $(KVERS) get-config`"'	>> debian/$(putils)/etc/infiniband/info
 	echo 'echo'							>> debian/$(putils)/etc/infiniband/info
 	chmod 755 debian/$(putils)/etc/infiniband/info
 
