--- a/drivers/net/ethernet/mellanox/mlx5/core/Makefile
+++ b/drivers/net/ethernet/mellanox/mlx5/core/Makefile
@@ -4,5 +4,5 @@ mlx5_core-y :=	main.o cmd.o debugfs.o fw.o eq.o uar.o pagealloc.o \
 		health.o mcg.o cq.o srq.o alloc.o qp.o port.o mr.o pd.o   \
 		mad.o transobj.o vport.o fs_cmd.o fs_tree.o
 mlx5_core-$(CONFIG_MLX5_CORE_EN) += wq.o  \
-		en_main.o en_flow_table.o en_ethtool.o en_tx.o en_rx.o \
+		en_main.o en_fs.o en_ethtool.o en_tx.o en_rx.o \
 		en_txrx.o en_dcb_nl.o en_sysfs.o en_ecn.o
